# superctrl

./: .gitignore  Cargo.toml  FISH_SHELL_SETUP.md  README.md  TESTING.md  install-macrowhisper-action.sh  install.sh  superctrl.plist  test_integration.sh
docs/: COMPUTER_USE_API.md  EMERGENCY_STOP.md  GUI_IMPLEMENTATION_SUMMARY.md  GUI_USAGE.md  HOTKEY_API.md  HOTKEY_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MACROWHISPER_IMPLEMENTATION.md  MACROWHISPER_INTEGRATION.md
examples/: computer_use_example.rs  emergency_stop_example.rs
src/: app.rs  automation.rs  cli.rs  computer_use.rs  config.rs  gui.rs  gui_integration.rs  hotkey.rs  ipc.rs  learning.rs  lib.rs  main.rs  menu_bar.rs  notifications.rs  preferences.rs  screenshot.rs
tests/: computer_use_api_test.rs  computer_use_integration.rs  e2e_daemon_test.rs
