[package]
name = "superctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
async-openai = { version = "0.24", default-features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
xcap = "0.0.11"
image = "0.25"
enigo = "0.2"
global-hotkey = "0.6"
tray-icon = "0.19"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
