[package]
name = "superctrl"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.22"
xcap = "0.0.11"
image = "0.25"
enigo = "0.2"
global-hotkey = "0.6"
tray-icon = "0.19"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.38", features = ["bundled", "serde_json", "chrono"] }
rdev = "0.5"
arboard = "3.2"
dirs = "5.0"
notify-rust = "4.11"
